# lorashare

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SCALABILITY.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: README.md  compare_compression.py  hub_usage.py  quickstart.py
src/lorashare/: __init__.py  chunked.py  cli.py  compression.py  config.py  io.py  layerwise.py  model.py
src/peft_share/: __init__.py  cli.py  io.py  model.py
tests/: conftest.py  test_compression.py  test_inference.py  test_io.py  test_model.py  test_output_quality.py  test_real_inference.py  test_scalability.py
tests/gpu/: conftest.py  setup_runpod.sh  test_claim_validation.py  test_edge_cases.py  test_end_to_end.py  test_gpu_performance.py  train_adapters.py
